src/v8/CAPI_CNData.pas


end;
//------------------------------------------------------------------------------
function CNData_Get_EmergAmps(): Double; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.EmergAmps;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_EmergAmps(Value: Double); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        pCNData.EmergAmps := Value;
        ConductorSetDefaults(ConductorProps.EmergAmps, pCNData);
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_Diameter(): Double; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FRadius * 2.0;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_Diameter(Value: Double); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FRadius := Value / 2.0;
            ConductorSetDefaults(ConductorProps.diam, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_Radius(): Double; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FRadius;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_Radius(Value: Double); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FRadius := Value;
            ConductorSetDefaults(ConductorProps.Radius, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_GMRac(): Double; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FGMR60;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_GMRac(Value: Double); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FGMR60 := Value;
            ConductorSetDefaults(ConductorProps.GMRac, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_Rac(): Double; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FR60;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_Rac(Value: Double); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FR60 := Value;
            ConductorSetDefaults(ConductorProps.Rac, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_Rdc(): Double; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FRDC;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_Rdc(Value: Double); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FRDC := Value;
            ConductorSetDefaults(ConductorProps.Rdc, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_GMRUnits(): Integer; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FGMRUnits;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_GMRUnits(Value: Integer); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FGMRUnits := Value;
            ConductorSetDefaults(ConductorProps.GMRunits, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_RadiusUnits(): Integer; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FRadiusUnits;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_RadiusUnits(Value: Integer); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FRadiusUnits := Value;
            ConductorSetDefaults(ConductorProps.radunits, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_ResistanceUnits(): Integer; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FResistanceUnits;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_ResistanceUnits(Value: Integer); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FResistanceUnits := Value;
            ConductorSetDefaults(ConductorProps.Runits, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_EpsR(): Double; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FEpsR;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_EpsR(Value: Double); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FEpsR := Value;
            CableDataSetDefaults(CableDataProps.EpsR, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_InsLayer(): Double; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FInsLayer;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_InsLayer(Value: Double); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FInsLayer := Value;
            CableDataSetDefaults(CableDataProps.InsLayer, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_DiaIns(): Double; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FDiaIns;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_DiaIns(Value: Double); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FDiaIns := Value;
            CableDataSetDefaults(CableDataProps.DiaIns, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_DiaCable(): Double; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FDiaCable;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_DiaCable(Value: Double); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FDiaCable := Value;
            CableDataSetDefaults(CableDataProps.DiaCable, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_k(): Integer; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FkStrand;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_k(Value: Integer); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FkStrand := Value;
            CNDataSetDefaults(CNDataProps.k, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_DiaStrand(): Double; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FDiaStrand;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_DiaStrand(Value: Double); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FDiaStrand := Value;
            CNDataSetDefaults(CNDataProps.DiaStrand, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_GmrStrand(): Double; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
